--- a/index.html
+++ b/index.html
@@ -1,72 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>MoonbouncePlus Data</title>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MoonbouncePlus Data</title>
+        <!-- import css/magic.css -->
+        <link rel="stylesheet" href="css/magic.css" />
+        <link rel="stylesheet" href="css/themes.css" />
+        <link rel="stylesheet" href="css/style.css" />
+    </head>
 
-    <!-- import css/magic.css -->
-    <link rel="stylesheet" href="css/magic.css" />
-    <link rel="stylesheet" href="css/themes.css" />
-    <link rel="stylesheet" href="css/style.css" />
-
-    <style>
-    </style>
-</head>
-
-<body>
-    <header>
-        <div class="header-content">
-            <h1>MoonbouncePlus Data</h1>
-            <div class="search-container">
-                <input type="text" 
-                       id="header-search" 
-                       class="search-input" 
-                       placeholder="Search items, sources..." />
-                <div id="search-results" class="search-results"></div>
+    <body>
+        <header>
+            <div class="header-content">
+                <h1>MoonbouncePlus Data</h1>
+                <div class="search-container">
+                    <input
+                        type="text"
+                        id="header-search"
+                        class="search-input"
+                        placeholder="Search items, sources..."
+                    />
+                    <div id="search-results" class="search-results"></div>
+                </div>
             </div>
-        </div>
-    </header>
-    <main>
-        <div class="description-card">
-            <p>Below is a list of items and their recipes in the game Moonbounce Plus.</p>
-            <p>The data is updated whenever I receive new item data from the game.</p>
-            <p>Some recipes may not be included as their items haven't been obtained yet.</p>
-        </div>
-
-        <div class="filter-controls">
-            <input type="text" id="search" placeholder="Search for an item..." 
-                   onkeyup="searchItems()" class="search-input" />
-            <select name="sort" id="sort" onchange="sortItems()" 
-                    class="sort-select"></select>
-        </div>
-        <div id="items"></div>
-    </main>
-    <footer>
-        <div class="footer-content">
-            <div class="footer-text">
-                <p>Created by <a href="https://github.com/Jordy3D/">Jordy3D</a></p>
-                <p>View the source code on <a href="https://github.com/Jordy3D/MoonbouncePlus">GitHub</a></p>
+        </header>
+        <main>
+            <div class="description-card">
+                <p>
+                    Below is a list of items and their recipes in the game
+                    Moonbounce Plus.
+                </p>
+                <p>
+                    The data is updated whenever I receive new item data from
+                    the game.
+                </p>
+                <p>
+                    Some recipes may not be included as their items haven't been
+                    obtained yet.
+                </p>
             </div>
-            <div class="theme-selector">
-                <select id="themeSelect" onchange="setTheme(this.value)">
-                    <option value="theme-light">Light Theme</option>
-                    <option value="theme-dark">Dark Theme</option>
-                    <option value="theme-fire">Fire Theme</option>
-                    <option value="theme-water">Water Theme</option>
-                    <option value="theme-air">Air Theme</option>
-                    <option value="theme-earth">Earth Theme</option>
-                </select>
-                <button onclick="cycleTheme()">Cycle Theme</button>
+
+            <div class="filter-controls">
+                <input
+                    type="text"
+                    id="search"
+                    placeholder="Search for an item..."
+                    onkeyup="searchItems()"
+                    class="search-input"
+                />
+                <select
+                    name="sort"
+                    id="sort"
+                    onchange="sortItems()"
+                    class="sort-select"
+                ></select>
             </div>
-        </div>
-    </footer>
+            <div id="items"></div>
+        </main>
+        <footer>
+            <div class="footer-content">
+                <div class="footer-text">
+                    <p>
+                        Created by
+                        <a href="https://github.com/Jordy3D/">Jordy3D</a>
+                    </p>
+                    <p>
+                        View the source code on
+                        <a href="https://github.com/Jordy3D/MoonbouncePlus"
+                            >GitHub</a
+                        >
+                    </p>
+                </div>
+                <div class="theme-selector">
+                    <select id="themeSelect" onchange="setTheme(this.value)">
+                        <option value="theme-light">Light Theme</option>
+                        <option value="theme-dark">Dark Theme</option>
+                        <option value="theme-fire">Fire Theme</option>
+                        <option value="theme-water">Water Theme</option>
+                        <option value="theme-air">Air Theme</option>
+                        <option value="theme-earth">Earth Theme</option>
+                    </select>
+                    <button onclick="cycleTheme()">Cycle Theme</button>
+                </div>
+            </div>
+        </footer>
 
-    <script src="js/config.js"></script>
-    <script src="js/themes.js"></script>
-    <script src="js/script.js"></script>
-
-</body>
-
+        <script src="js/config.js"></script>
+        <script src="js/themes.js"></script>
+        <script src="js/script.js"></script>
+        <script src="js/search.js"></script>
+    </body>
 </html>
