Added Quest data support, some pages, code cleanup

--- a/wiki.html
+++ b/wiki.html
@@ -38,7 +38,7 @@
     <body>
         <header>
             <div class="header-content">
-                <h1><a href="index.html">MoonbouncePlus Wiki</a></h1>
+                <h1><a href="wiki.html">MoonbouncePlus Wiki</a></h1>
                 <div class="search-container">
                     <input
                         type="text"
@@ -82,6 +82,7 @@
         </footer>
         <script src="js/config.js"></script>
         <script src="js/wiki.js"></script>
+        <script src="js/pages.js"></script>
         <script src="js/search.js"></script>
     </body>
 </html>
