Finally actually add icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MoonbouncePlus Data</title>
 
+        <link rel="icon" href="images/favicon.png" type="image/png" />
+
         <!-- import css/magic.css -->
         <link rel="stylesheet" href="css/magic.css" />
         <link rel="stylesheet" href="css/themes.css" />
