--- a/wiki.html
+++ b/wiki.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MoonbouncePlus Wiki</title>
+
+        <link rel="icon" href="images/favicon.png" type="image/png" />
+
         <link rel="stylesheet" href="css/magic.css" />
         <link rel="stylesheet" href="css/themes.css" />
 
