--- a/preview.html
+++ b/preview.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moonbounce Hat Preview</title>
 
+    <link rel="icon" href="images/favicon.png" type="image/png" />
+
     <link rel="stylesheet" href="css/magic.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/preview.css">
